--- a/src/views/AccountModel/StepsBuild/stepSelect.css
+++ b/src/views/AccountModel/StepsBuild/stepSelect.css
@@ -36,3 +36,31 @@
   width: 320px;
   font-size: 15px;
 }
+
+.listaul {
+	border: 4px solid #1a3369;
+	list-style-type: none;	
+	margin: 0;
+	padding: 0.25em;
+	background-color: ghostwhite;
+	min-height: 300px;
+	border-radius: .5em;
+}
+
+.listaul li {
+	color: black;
+	padding: .25em 0 .25em 0;
+}
+
+.listaul li.activa {
+	background-color: rgb(21, 144, 245);
+}
+
+.listaul li.activa:hover {
+	background-color: rgb(21, 144, 245);
+}
+
+.listaul li:hover {
+	background-color: grey;
+	cursor: pointer;
+}
